k8s/testlab/whatsmyip/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsmyip
  namespace: whatsmyip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatsmyip
  template:
    metadata:
      namespace: whatsmyip
      labels:
        app: whatsmyip
    spec:
      containers:
        - name: whatsmyip
          image: yauritux/busybox-curl
          command: ["/bin/sh", "-ec", "while :; do echo `curl -s 'http://ipinfo.io/ip'`; sleep 5 ; done"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
