k8s/testlab/whatsmyip/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whatsmyip
  namespace: whatsmyip
spec:
  type: ClusterIP
  selector:
    app: whatsmyip
  ports:
    - name: web
      port: 80
      targetPort: 8080
